[package]
name = "tachi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
reqwest = "0.11.8"
serde = { version = "1.0.209", features = ["derive", "serde_derive"] }
serde_json = "1.0.127"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
